--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,11 +1,3 @@
-name: Python Flask CI/CD
-
-on:
-  push:
-    branches: [ main, feature ]
-  pull_request:
-    branches: [ main ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,6 +18,11 @@ jobs:
     - name: Run tests
       run: |
         python -m unittest discover -s . -p "test_*.py"
+
+    - name: Set up Node.js (required for Slack Action)
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'  # or use '20' for latest LTS
 
     - name: Send Slack Notification
       if: always()
