--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,3 +1,11 @@
+name: Python Flask CI/CD
+
+on:
+  push:
+    branches: [ main, feature ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -9,7 +17,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
@@ -22,7 +30,7 @@ jobs:
     - name: Set up Node.js (required for Slack Action)
       uses: actions/setup-node@v3
       with:
-        node-version: '18'  # or use '20' for latest LTS
+        node-version: '18'
 
     - name: Send Slack Notification
       if: always()
